--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -94,7 +94,7 @@
                     <input class="form-control" type="search" name="shopName" placeholder="Search shop..."
                         aria-label="Search">
                     <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-search fa-sm"></i>
                     </button>
                 </div>
             </form>
@@ -175,7 +175,7 @@
     .navbar .form-control:focus {
         background: rgba(255, 255, 255, 0.15);
         box-shadow: none;
-        border-color: #0d6efd;
+        border-color: #e8ebf0;
     }
 
     .navbar .btn-primary {
@@ -200,7 +200,7 @@
     }
 
     .offcanvas .nav-link:hover {
-        color: #0d6efd !important;
+        color: #d7dce4 !important;
         background: rgba(13, 110, 253, 0.1);
         padding-left: 1rem;
     }
